# sitro

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  docker.yml
docker/: Dockerfile  build-and-push.sh  entrypoint.sh
src/: lib.rs  main.rs  renderer.rs
src/pdfium/: Cargo.toml
src/pdfium/src/: main.rs
src/pdfjs/: .gitignore  package-lock.json  package.json  pdf2png.mjs  pdf2png_backup.mjs  pdfjs_pdf.mjs  pdfjs_render.mjs  scrape.js
src/pdfjs/server/: test.html
src/pdfjs_archive/: package-lock.json  scrape.js
src/pdfjs_archive/server/: pdf.mjs  test.html
src/quartz/: .gitignore  build.sh  quartz_pdf.m  quartz_render.m
src/renderer/: mod.rs  quartz.rs
tests/: renderer_integration.rs
