[package]
name = "sitro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.24.7", features = ["png"]}
pdfium-render = { version = "0.8.17", features = ["sync"]}
regex = "1.10.2"
tempdir = "0.3.7"
