workspace = { members = ["src/pdfium"] }
[package]
name = "sitro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.24.7", features = ["png"]}
imagesize = "0.12.0"
rayon = "1.8.1"
regex = "1.10.2"
tempdir = "0.3.7"
tiny-skia = "0.11.4"
walkdir = "2.4.0"
hayro = { git = "https://github.com/LaurenzV/hayro.git", rev = "6c843cf5c20516a7ee9829e4b8202db392f8bd55", features = ["embed-fonts"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
foreign-types = "0.5"
